--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -25,6 +25,9 @@ FROM nginx:stable-alpine
 # Copy built files from builder
 COPY --from=builder /app/dist /usr/share/nginx/html
 
+# Copy custom nginx config to enable /api proxy to backend
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 # Expose port 80
 EXPOSE 80
 
